--- a/index.html
+++ b/index.html
@@ -442,6 +442,19 @@ Copyright <script>document.write(new Date().getFullYear());</script> Eric Chi Al
 	
 	</script>
 
+				
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-133732271-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-133732271-1');
+</script>
+
+
+
 	</body>
 </html>
 
