--- a/QJ_Farm.html
+++ b/QJ_Farm.html
@@ -26,7 +26,7 @@
 
 	<section class="billboard dark">
 		<header class="wrapper dark">
-			<a href="index.html"><img class="logo" src="work/img/eric.svg" width="12%" alt=""/></a>
+			<a href="index.html"><img class="logo" src="work/img/eric.svg"  alt=""/></a>
 			
 		</header>
 
@@ -110,7 +110,7 @@
 		We use affinity diagram to list our notes.<br><br></span></div>
 
 		<div class="wow animated fadeInUp">
-		<img style="width:50%;display: block; margin: auto;" src="work/img/aff.jpg">
+		<img style="display: block; margin: auto;" src="work/img/aff.jpg">
 		</div>
 
 
@@ -219,7 +219,7 @@
 
 	<div class="wow animated fadeIn">
 	<h2>Five Main Functions</h2>
-	<img style="width: 60%; margin-left: 18%; margin-top: 3%;" src="work/img/function.svg">
+	<img src="work/img/function.svg">
 	</div>
 
 
@@ -237,6 +237,8 @@
 	Based on our main functions and goals, we made our first wireframe.
 	</span>
 </div>
+
+
 
 	</section>
 
@@ -285,7 +287,7 @@
 		</section>
 
 
-		<hr>
+		<hr class="wow animated fadeIn">
 
 
 
@@ -315,7 +317,7 @@
 		
 </section>
 
-<hr>
+<hr class="wow animated fadeIn">
 
 <section class="wrapper reflection">
 	<div class="wow animated fadeInUp"><h1>Reflection</h1>
