--- a/vote.html
+++ b/vote.html
@@ -24,7 +24,7 @@
 
 	<section class="billboard dark">
 		<header class="wrapper dark">
-			<a href="index.html"><img class="logo" src="work/img/eric.svg" width="12%" alt=""/></a>
+			<a href="index.html"><img class="logo" src="work/img/eric.svg"  alt=""/></a>
 			
 		</header>
 
