--- a/index.html
+++ b/index.html
@@ -49,14 +49,14 @@
 
 
 	<!-- Global site tag (gtag.js) - Google Analytics -->
-	<!-- <script async src="https://www.googletagmanager.com/gtag/js?id=UA-133732271-1"></script>
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-133732271-1"></script>
 	<script>
   	window.dataLayer = window.dataLayer || [];
   	function gtag(){dataLayer.push(arguments);}
   	gtag('js', new Date());
 
   	gtag('config', 'UA-133732271-1');
-	</script> -->
+	</script>
 
 
 	</head>
