--- a/QJ_Farm.html
+++ b/QJ_Farm.html
@@ -110,7 +110,7 @@
 		We use affinity diagram to list our notes.<br><br></span></div>
 
 		<div class="wow animated fadeInUp">
-		<img style="display: block; margin: auto;" src="work/img/aff.jpg">
+		<img class="diagram" src="work/img/aff.jpg">
 		</div>
 
 
@@ -219,7 +219,7 @@
 
 	<div class="wow animated fadeIn">
 	<h2>Five Main Functions</h2>
-	<img src="work/img/function.svg">
+	<img class="function" src="work/img/function.svg">
 	</div>
 
 
