--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> Eric Chi Al
 						</div>
 						<div class="col-md-3 text-center animate-box">
 							<span class="colorlib-counter js-counter" data-from="0" data-to="277" data-speed="3000" data-refresh-interval="50"></span>
-							<span class="colorlib-counter-label">Tacos</span>
+							<span class="colorlib-counter-label">Ideas</span>
 						</div>
 						<div class="col-md-3 text-center animate-box">
 							<span class="colorlib-counter js-counter" data-from="99" data-to="1" data-speed="3000" data-refresh-interval="50"></span>
