--- a/QJ_Farm.html
+++ b/QJ_Farm.html
@@ -90,7 +90,7 @@
 		<span class="animated wow fadeInUp">Generally speaking, CSA farm offers consumers regular farm products on a subscription or membership basis. Consumers pay same fee and receive products without choosing what they want and stable product amount. If there is a rich harvest, consumers will receive more products than usual. On the other hand, they will receive less products after natural disasters. It is the way how consumers share risks with the farm. During the time we did field research there, the subscription number was decreasing. It had brought the manager to consider to seek for some change.  </span>
 
 		<h2 class="animated wow fadeInUp">Research Questions</h2>
-		<p class="animated wow fadeInUp"> Why do the subscription number decline?<br>Is there better way than subscription?<br>How to share risk with customers without subscription?<br>What’s the specialty and unique of QJ Farm?</p>
+		<p class="animated wow fadeInUp"> Why do the subscription number decline?<br>What is the main goal and pain point of QJ Farm and their costumers?<br>How to share risk with customers without subscription?<br>What’s the specialty and unique of QJ Farm?</p>
 
 
 
