--- a/index.html
+++ b/index.html
@@ -221,7 +221,19 @@ Copyright <script>document.write(new Date().getFullYear());</script> Eric Chi Al
 					
 					<div class="row">
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
-							<div class="project" style="background-image: url(work/img/qj_mockup.jpg); width: 103%; margin-left: -3%">
+							<div class="project" style="background-image: url(images/blushup.svg); width: 103%; margin-left: -3%">
+							<a href="blushup.html" target="blank"><div class="desc">
+									<div class="con">
+										<h1>Blushup</h1>
+										<span>UI/UX</span>
+									</div>
+								</div>
+							</div>
+						</div></a>
+
+					<div class="row">
+						<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
+							<div class="project" style="background-image: url(work/img/qj_mockup.jpg); width: 103%; ">
 							<a href="QJ_Farm.html" target="blank"><div class="desc">
 									<div class="con">
 										<h1>QJ Farm App</h1>
@@ -232,7 +244,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> Eric Chi Al
 						</div></a>
 
 						<div class="row">
-						<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
+						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
 							<div class="project" style="background-image: url(work/img/mac.gif);">
 							<a href="SoCoolEng.html" target="blank"><div class="desc">
 									<div class="con">
@@ -242,7 +254,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> Eric Chi Al
 								</div>
 							</div>
 						</div></a>
-						<div class="col-md-6 animate-box" data-animate-effect="fadeInTop">
+						<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
 							<div class="project" style="background-image: url(work/img/vote.png);">
 								<a href="vote.html" target="blank"><div class="desc">
 									<div class="con">
