--- a/blushup.html
+++ b/blushup.html
@@ -8,7 +8,7 @@
 	<meta name="HandheldFriendly" content="true">
 	<meta name="author" content="Eric Chi">
 	<meta name="description" content="Blushup ui ux Eric chi designer "/>
-	<link rel="stylesheet" type="text/css" href="work/css/reset.css">
+	<!-- <link rel="stylesheet" type="text/css" href="work/css/reset.css"> -->
 	<link rel="stylesheet" type="text/css" href="work/css/animate.css">
 	<link rel="stylesheet" type="text/css" href="work/css/blushup.css">
 	<link rel="icon" type="image/png" href="favicon.png" sizes="16x16">
@@ -43,6 +43,9 @@
 	<section class="bg wrapper">
 		<div class="animated wow fadeInDown">
 		<h2>Please hit me up and I will be more than happy to share and discuss with you as much as I can!</h2>
+		<div class="link"> <a href="mailto:chiyyyy@utexas.edu"><p>Email: chiyyyy@utexas.edu</p></a><a href="tel:5122010220"><p>Phone: 5122010220</p></a>
+		</div>
+
 	</section>
 	
 
