--- a/QJ_Farm.html
+++ b/QJ_Farm.html
@@ -11,7 +11,10 @@
 	<link rel="stylesheet" type="text/css" href="work/css/reset.css">
 	<link rel="stylesheet" type="text/css" href="work/css/animate.css">
 	<link rel="stylesheet" type="text/css" href="work/css/farm.css">
+	<link rel="stylesheet" href="work/css/scroll.css">
+	<link href="https://fonts.googleapis.com/css?family=Istok+Web:700" rel="stylesheet">
 	<link rel="icon" type="image/png" href="favicon.png" sizes="16x16">
+	<script src="work/js/modernizr.js"></script>
     <script type="text/javascript" src="work/js/jquery.js"></script>
     <script type="text/javascript" src="work/js/fancybox.js"></script>
     <script type="text/javascript" src="work/js/fancybox-buttons.js"></script>
@@ -23,6 +26,52 @@
 
 </head>
 <body>
+	<nav id="cd-vertical-nav">
+		<ul>
+			<li>
+				<a href="#section1" data-number="1">
+					<span class="cd-dot"></span>
+					<span class="cd-label">Overview</span>
+				</a>
+			</li>
+			<li>
+				<a href="#section2" data-number="2">
+					<span class="cd-dot"></span>
+					<span class="cd-label">Background & Challenges</span>
+				</a>
+			</li>
+			<li>
+				<a href="#section3" data-number="3">
+					<span class="cd-dot"></span>
+					<span class="cd-label">User Research & Definition</span>
+				</a>
+			</li>
+			<li>
+				<a href="#section4" data-number="4">
+					<span class="cd-dot"></span>
+					<span class="cd-label">Ideation & Functions</span>
+				</a>
+			</li>
+			<li>
+				<a href="#section5" data-number="5">
+					<span class="cd-dot"></span>
+					<span class="cd-label">Wireframes & Prototypes</span>
+				</a>
+			</li>
+			<li>
+				<a href="#section6" data-number="6">
+					<span class="cd-dot"></span>
+					<span class="cd-label">Final Design</span>
+				</a>
+			</li>
+			<li>
+				<a href="#section7" data-number="7">
+					<span class="cd-dot"></span>
+					<span class="cd-label">Reflection</span>
+				</a>
+			</li>
+		</ul>
+	</nav>
 
 	<section class="billboard dark">
 		<header class="wrapper dark">
@@ -39,6 +88,7 @@
 		
 	</section><!--  End billboard  -->
 
+	<section id="section1" class="cd-section">
 	<div class="overview">
 		<div class="animated wow fadeInDown">
 		<h2> Overview </h2>
@@ -77,7 +127,9 @@
 		<img class="animated wow fadeInUp" data-wow-delay=".2s" src="work/img/design_process.svg">
 	</section>
 
+</section>
 
+<section id="section2" class="cd-section">
 	<section class="background wrapper">
 		<h2 class="animated wow fadeInUp">Background</h2>
 		<span class="animated wow fadeInUp">CSA is abbreviation of “Community-Supported Agriculture”. It is an alternative socioeconomic model of agriculture and food distribution that allows the producer and consumer to share risks of farming. When consumers sharing risks with QJ CSA Farm, they gain organic and eco-friendly farm products as return. 
@@ -95,10 +147,10 @@
 
 
 	</section>
-
+</section>
 	<hr class="animated wow fadeIn">
 
-
+	<section id="section3" class="cd-section">
 	<section class="research wrapper">
 		
 		<h1 class="animated wow fadeInUp">User Research</h1>
@@ -181,11 +233,11 @@
 	
 
 	</section>
-
+</section>
 
 	<hr class="animated wow fadeIn">
 
-
+	<section id="section4" class="cd-section">
 	<section class="ideation wrapper">
 	<div class="animated wow fadeInUp">
 	<h1>Ideation</h1>
@@ -241,10 +293,11 @@
 
 
 	</section>
-
+</section>
 
 	<hr class="animated wow fadeIn">
 
+	<section id="section5" class="cd-section">
 	<section class="wp wrapper">
 		<div class="animated wow fadeInDown">
 		<h1>Wireframe and Prototype</h1>
@@ -285,13 +338,13 @@
 
 
 		</section>
-
+	</section>
 
 		<hr class="wow animated fadeIn">
 
 
 
-		<section class="pt wrapper">
+		<section id="section6" class="pt wrapper cd-section">
 			<h1 class="animated wow fadeInDown">Final Design</h1>
 
 		<h2 class="animated wow fadeInDown">Purchase items and reserve events for users</h2>
@@ -319,6 +372,8 @@
 
 <hr class="wow animated fadeIn">
 
+
+<section id="section7" class="cd-section">
 <section class="wrapper reflection">
 	<div class="wow animated fadeInUp"><h1>Reflection</h1>
 
@@ -338,7 +393,7 @@ I gained a ton of insight into research and design from the special context fo Q
 
 <img id="mock" class="wow animated fadeInDown" src="work/img/qj_mockup.jpg" >
 
-
+</section>
 
 
 	<footer>
@@ -354,5 +409,7 @@ I gained a ton of insight into research and design from the special context fo Q
 		</div>		
 	</footer>
 	<!--  End footer  -->
-
+	<script src="work/js/jquery-2.1.1.js"></script>
+	<script src="work/js/scroll.js"></script> <!-- Resource jQuery -->
+</body>
 </html>
