--- a/QJ_Farm.html
+++ b/QJ_Farm.html
@@ -305,14 +305,21 @@
 		<span>According to unpredictable supplement and pre-order, we have orders start from pending status after consumers placing their orders. The farm has to confirm that all of items in the order are available and then click “confirm order” button to accept the order. We also designed a message section for consumers and producer to communicate directly and efficiently. </span>
 		</div>
 
-		<div class="animated wow fadeInUp">
+		
 
-		<h2>For users</h2>
-		<img src="work/img/wireframeu.svg">
+		<h2 class="animated wow fadeInDown">For users</h2>
+		<div class="animated wow fadeIn">
+		<img src="work/img/qj1.svg">
+		<img src="work/img/qj2.svg">
+		<img src="work/img/qj3.svg">
 		</div>
-		<div class="animated wow fadeInUp">
-		<h2>For QJ Farm</h2>
-		<img src="work/img/wireframefi.svg">
+
+		
+		<h2 class="wow animated fadeInDown">For QJ Farm</h2>
+		<div class="animated wow fadeIn">
+		<img src="work/img/qj4.svg">
+		<img src="work/img/qj5.svg">
+		<img src="work/img/qj6.svg">
 		</div>
 		</section>
 
