--- a/SoCoolEng.html
+++ b/SoCoolEng.html
@@ -56,6 +56,7 @@
 
 </head>
 <body>
+	<div class="hide">
 	<nav id="cd-vertical-nav">
 		<ul>
 			<li>
@@ -90,6 +91,7 @@
 			</li>
 		</ul>
 	</nav>
+</div>
 	<section class="billboard dark">
 		<header class="wrapper dark">
 			<a href="index.html"><img class="logo" src="work/img/eric.svg" alt=""/></a>
