--- a/QJ_Farm.html
+++ b/QJ_Farm.html
@@ -44,25 +44,25 @@
 			<li>
 				<a href="#section3" data-number="3">
 					<span class="cd-dot"></span>
-					<span class="cd-label">User Research & Definition</span>
+					<span class="cd-label">Final Design</span>
 				</a>
 			</li>
 			<li>
 				<a href="#section4" data-number="4">
 					<span class="cd-dot"></span>
-					<span class="cd-label">Ideation & Functions</span>
+					<span class="cd-label">User Research & Definition</span>
 				</a>
 			</li>
 			<li>
 				<a href="#section5" data-number="5">
 					<span class="cd-dot"></span>
-					<span class="cd-label">Wireframes & Prototypes</span>
+					<span class="cd-label">Ideation & Functions</span>
 				</a>
 			</li>
 			<li>
 				<a href="#section6" data-number="6">
 					<span class="cd-dot"></span>
-					<span class="cd-label">Final Design</span>
+					<span class="cd-label">Wireframes & Prototypes</span>
 				</a>
 			</li>
 			<li>
@@ -145,13 +145,40 @@
 		<h2 class="animated wow fadeInUp">Research Questions</h2>
 		<p class="animated wow fadeInUp"> Why do the subscription number decline?<br>What is the main goal and pain point of QJ Farm and their costumers?<br>How to share risk with customers without subscription?<br>What’s the specialty and unique of QJ Farm?</p>
 
-
-
 	</section>
+</section>
+	<hr>
+
+	<section id="section3" class="pt wrapper cd-section">
+			<h1 class="animated wow fadeInDown">Final Design</h1>
+
+		<h2>Features</h2>
+
+		<img class="funicon" src="work/img/funicon.svg">
+
+		<h2 class="animated wow fadeInDown">Purchase items and reserve events for users</h2>
+
+
+			
+	<iframe style="border: none;" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FKmcRpxqDKA4XvMbqCk7XlBI1%2FPurchase-items-Reserve-events%3Fnode-id%3D0%253A1%26viewport%3D-1242%252C-450%252C0.296851%26scaling%3Dscale-down" allowfullscreen></iframe>
+
+
+
+	<h2 class="animated wow fadeInDown">Add items and events for QJ Farm</h2>
+
+
+	<iframe style="border: none;" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FUgjOza4x36hMCBFI9X9MJMkh%2FAdd-items-events%3Fnode-id%3D0%253A1%26viewport%3D-517%252C3%252C0.172938%26scaling%3Dscale-down" allowfullscreen></iframe>
+
+	<h2 class="animated wow fadeInDown">Game & Recipes</h2>
+
+	<img class="gr" src="work/img/game.svg">
+	<img class="gr" src="work/img/recipe.svg">
+
+
 </section>
 	<hr class="animated wow fadeIn">
 
-	<section id="section3" class="cd-section">
+	<section id="section4" class="cd-section">
 	<section class="research wrapper">
 		
 		<h1 class="animated wow fadeInUp">User Research</h1>
@@ -238,7 +265,7 @@
 
 	<hr class="animated wow fadeIn">
 
-	<section id="section4" class="cd-section">
+	<section id="section5" class="cd-section">
 	<section class="ideation wrapper">
 	<div class="animated wow fadeInUp">
 	<h1>Ideation</h1>
@@ -272,7 +299,7 @@
 
 	<div class="wow animated fadeIn">
 	<h2>Five Main Functions</h2>
-	<img class="function" src="work/img/function.svg">
+	<img class="function" src="work/img/function.png">
 	</div>
 
 
@@ -298,7 +325,7 @@
 
 	<hr class="animated wow fadeIn">
 
-	<section id="section5" class="cd-section">
+	<section id="section6" class="cd-section">
 	<section class="wp wrapper">
 		<div class="animated wow fadeInDown">
 		<h1>Wireframe and Prototype</h1>
@@ -352,33 +379,9 @@
 
 
 
-		<section id="section6" class="pt wrapper cd-section">
-			<h1 class="animated wow fadeInDown">Final Design</h1>
-
-		<h2 class="animated wow fadeInDown">Purchase items and reserve events for users</h2>
-
-
-			
-	<iframe style="border: none;" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FKmcRpxqDKA4XvMbqCk7XlBI1%2FPurchase-items-Reserve-events%3Fnode-id%3D0%253A1%26viewport%3D-1242%252C-450%252C0.296851%26scaling%3Dscale-down" allowfullscreen></iframe>
-
-
-
-	<h2 class="animated wow fadeInDown">Add items and events for QJ Farm</h2>
-
-
-	<iframe style="border: none;" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FUgjOza4x36hMCBFI9X9MJMkh%2FAdd-items-events%3Fnode-id%3D0%253A1%26viewport%3D-517%252C3%252C0.172938%26scaling%3Dscale-down" allowfullscreen></iframe>
-
-	<h2 class="animated wow fadeInDown">Game & Recipes</h2>
-
-	<div class="animated wow fadeIn">
-	<img src="work/img/game.svg">
-	<img src="work/img/recipe.svg">
-</div>
-
 		
-</section>
 
-<hr class="wow animated fadeIn">
+
 
 
 <section id="section7" class="cd-section">
