--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> Eric Chi Al
 					<li><a href="https://www.facebook.com/profile.php?id=100002158816472" target="blank"><i class="icon-facebook2"></i></a></li>
 					<li><a href="https://www.instagram.com/ericychi__/" target="blank"><i class="icon-instagram"></i></a></li>
 					<li><a href="https://www.linkedin.com/in/yucheng-chi/" target="blank"><i class="icon-linkedin2"></i></a></li>
-					<li><a href="https://dribbble.com/ycchi" target="blank"><i class="icon-social-dribbble"></i></a></li>
+					<li><a href="https://dribbble.com/ycchi" target="blank"><i class="icon-dribbble2"></i></a></li>
 				</ul>
 
 				
