--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 		<aside id="colorlib-aside" role="complementary" class="border js-fullheight">
 			<div class="text-center">
 				<a href="index.html"><div class="author-img" style="background-image: url(images/eric.svg);"></div></a>
-				<span class="position"><p>UI/UX Designer</p></span>
+				<span class="position"><p>UI/UX Designer <br> Front-end Developer </p></span>
 			</div>
 			<nav id="colorlib-main-menu" role="navigation" class="navbar">
 				<div id="navbar" class="collapse">
@@ -252,7 +252,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> Eric Chi Al
 							<a href="SoCoolEng.html" target="blank"><div class="desc">
 									<div class="con">
 										<h1>So Cool English</h1>
-										<span>Web Development</span>
+										<span>Product Design</span>
 									</div>
 								</div>
 							</div>
