--- a/Collection.html
+++ b/Collection.html
@@ -43,8 +43,11 @@
 	<section class="p1 wrapper">
 		<div class="animated wow fadeInDown">
 		<h2> 01. 404 Error Page </h2>
-			<img src="work/img/404.png">
+			<img id="error" src="work/img/404.png">
 		</div>
+
+		<h2> 02. Blushup - How it works </h2>
+			<img id="hiw" src="work/img/hiw.gif">
 
 	</section>
 	
