--- a/QJ_Farm.html
+++ b/QJ_Farm.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>QJ Farm App</title>
+	<title>Q's Farm App</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<meta name="HandheldFriendly" content="true">
 	<meta name="author" content="Eric Chi">
-	<meta name="description" content="An app aims to provide a platform which allows consumers to pre-order products and reserve events of QJ farm."/>
+	<meta name="description" content="An app aims to provide a platform which allows consumers to pre-order products and reserve events of farmers' market."/>
 	<link rel="stylesheet" type="text/css" href="work/css/reset.css">
 	<link rel="stylesheet" type="text/css" href="work/css/animate.css">
 	<link rel="stylesheet" type="text/css" href="work/css/farm.css">
@@ -81,7 +81,7 @@
 		</header>
 
 		<div class="caption dark clearfix focus-in-contract-bck">
-			<h1>QJ Farm App</h1>
+			<h1>Q's Farm App</h1>
 			<p>UI/UX</p>
 			<hr>
 		</div>
@@ -93,7 +93,7 @@
 	<div class="overview">
 		<div class="animated wow fadeInDown">
 		<h2> Overview </h2>
-		<p>It is an app aims to provide a platform which allows consumers to pre-order/order products and reserve events of QJ farm and also allows QJ Farm to update their inventory and events easily. The project includes complete process of ux research, solution ideation and ui design. We’ve conduct over 100+ hour in field research and it is one of our proposals.  </p>
+		<p>Q's Farmer App is an app more than traditional digital marketplace. It provides a platform for farmers and consumers to trade and communication. Moreover, it aims for maintaining social ties between farmers and consumers in both digital and real world. The project includes complete process of ux research, solution ideation and ui design. I did the research part as a group and the design part by myself. </p>
 	</div>
 		</div>
 
@@ -115,7 +115,7 @@
 			</li>
 			<li class="animated wow fadeInDown"  data-wow-delay=".6s">
 				<h2>Company</h2>
-				<p>Coursework at NCTU</p>
+				<p>Coursework at UT</p>
 			</li>
 		</ul>
 	</section><!--  End intro  -->
@@ -133,17 +133,17 @@
 <section id="section2" class="cd-section">
 	<section class="background wrapper">
 		<h2 class="animated wow fadeInUp">Background</h2>
-		<span class="animated wow fadeInUp">CSA is abbreviation of “Community-Supported Agriculture”. It is an alternative socioeconomic model of agriculture and food distribution that allows the producer and consumer to share risks of farming. When consumers sharing risks with QJ CSA Farm, they gain organic and eco-friendly farm products as return. 
-		<br><br>
-		QJ CSA Farm is a small/medium scale farm located at the edge of city. It practices organic and eco-friendly agriculture without pesticide and chemistry involved. People can drive there from downtown within 30 minutes. There are two goals of QJ Farm. First one is to create stable income and job opportunity for urban indigenous people. Second one is to provide a place where people can get touch with nature and learn the knowledge of our daily food.  </span>	
+		<span class="animated wow fadeInUp">A farmers' market is a physical retail marketplace intended to sell foods directly by farmers to consumers. There are several benefits for farmers’ market. For example, by directly selling products to consumer, farmers gain more profits than selling it to wholesalers, food processors, or large grocery firms. Consumers also receive fresher and healthier foods meanwhile reduce the cost and pollution. <br><br>
+
+		Farmers hold different kind of events for people to get closer to nature and deliver knowledged of our daily food to everyone. For instance, A small farm in Austin they cooperate with schools to teach kids where our food comes from and teach them how to grow their own plants. In other words, farms play the role of educator and provide a space for leisure. 		</span>	
 
 		<img class="animated wow fadeInUp" src="work/img/IMG_4625.jpg">
 
 		<h2 class="animated wow fadeInUp">Challenge</h2>
-		<span class="animated wow fadeInUp">Generally speaking, CSA farm offers consumers regular farm products on a subscription or membership basis. Consumers pay same fee and receive products without choosing what they want and stable product amount. If there is a rich harvest, consumers will receive more products than usual. On the other hand, they will receive less products after natural disasters. It is the way how consumers share risks with the farm. During the time we did field research there, the subscription number was decreasing. It had brought the manager to consider to seek for some change.  </span>
+		<span class="animated wow fadeInUp"> For small and medium scale farmers, they have trouble in maintaining their inventory due to several reasons. They also suffer from unnecessary loss because of the characteristics of fresh vegetable and fruit. Thus, farmers seek a new way to share their risks with consumer and meet consumer’s  needs at the same time. </span>
 
 		<h2 class="animated wow fadeInUp">Research Questions</h2>
-		<p class="animated wow fadeInUp"> Why do the subscription number decline?<br>What is the main goal and pain point of QJ Farm and their costumers?<br>How to share risk with customers without subscription?<br>What’s the specialty and unique of QJ Farm?</p>
+		<p class="animated wow fadeInUp">How to duplicate the experience of farmers market from real world to digtial world? <br> What are the main goal and pain point of farmer and consumer?<br>How to share risk with customers<br>What’s the specialty and unique of farmers market?</p>
 
 	</section>
 </section>
@@ -156,7 +156,7 @@
 
 		<img class="funicon" src="work/img/funicon.svg">
 
-		<h2 class="animated wow fadeInDown">Purchase items and reserve events for users</h2>
+		<h2 class="animated wow fadeInDown">Purchase items and reserve events for consumers</h2>
 
 
 			
@@ -164,7 +164,7 @@
 
 
 
-	<h2 class="animated wow fadeInDown">Add items and events for QJ Farm</h2>
+	<h2 class="animated wow fadeInDown">Add items and events for farmer</h2>
 
 
 	<iframe style="border: none;" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FUgjOza4x36hMCBFI9X9MJMkh%2FAdd-items-events%3Fnode-id%3D0%253A1%26viewport%3D-517%252C3%252C0.172938%26scaling%3Dscale-down" allowfullscreen></iframe>
@@ -185,7 +185,7 @@
 
 		<div class="animated wow fadeInUp">
 		<h2>Contextual Inquiry & Observations</h2>
-		<span>As part of field study, we mainly relied on contextual inquiry to gain insight of users. We not only conducted contextual inquiries on all farmers at QJ farm but also conducted it on 2 event attendants and customers. By observing users directly and recording their attitude, mood, reaction during real tasks, it brought us the information we couldn’t retrieve from interview. Through notes, photos and videos from different person and perspectives, we were able to discuss and integrate the opinions afterward and finally catch the core values of that users care.
+		<span>As part of field study, we mainly relied on contextual inquiry to gain insight of users. We not only conducted contextual inquiries on small/medium 5 farmers but also conducted it on 4 different types of target users. By observing users directly and recording their attitude, mood, reaction during real tasks, it brought us the information we couldn’t retrieve from interview. Through notes, photos and videos from different person and perspectives, we were able to discuss and integrate the opinions afterward and finally catch the core values of that users care.
 			<br><br>
 		We use affinity diagram to list our notes.<br><br></span></div>
 
@@ -198,7 +198,7 @@
 
 		<div class="animated wow fadeInUp">		
 		<h2>Interview</h2>
-		<span>We conducted 4 semi-structured interview as well, including the manager of QJ farm and three consumers. The manager had been worked at the farm 3 years and one interviewee had been consumer of the farm for over 1 year, the others two had been consumer for less 1 year. Different from contextual inquiry, semi-structured interview provided us information within a narrow scale. With the information in a restricted scale, we spotted the common difficulties or problems that users would face during tasks. <br></span>
+		<span>We conducted 7 semi-structured interview as well, including the manager of 1 medium farm, 2 farmers and 4 consumers. We regarded the manager of medium farm as key informant who is able to provide us the most insights about farmers. We interviewed 4 different types of consumers as well. Different from contextual inquiry, semi-structured interview provided us information within a narrow scale. With the information in a restricted scale, we spotted the common difficulties or problems that users would face during tasks. <br></span>
 		</div>
 
 		
@@ -208,7 +208,7 @@
 
 		
 		<div class="animated wow fadeInUp">		
-		<h2>Traditional Task Flow for QJ Farm</h2>
+		<h2>Traditional Task Flow for ordering products</h2>
 		<span>We mapped the traditional task flow for taking orders for customers by phone. </span>
 		<img class="icon" style="width: 100%; margin: auto;" src="work/img/orderflow.svg">
 		</div>
@@ -216,8 +216,8 @@
 
 
 		<div class="animated wow fadeInUp">
-		<h2>Challenges of QJ Farm</h2>
-		<span>We identified three challenges of QJ Farm form the interview with farm manager. </span>
+		<h2>Challenges of farmers</h2>
+		<span>We identified three challenges of farmer form the interview with farm manager and farmers. </span>
 	   </div>
 		<div class="animated wow fadeIn">
 
@@ -225,8 +225,8 @@
 		<img class="icon" src="work/img/hourglass.svg">
 		<img class="icon" src="work/img/update.svg">
 
-		<p id="d1"><mark>Unpredictable harvest</mark><br>Due to weather or other factors, harvest of the farm is <strong>unpredictable</strong>.</p> 
-		<p id="d2"><mark>Short shelf life</mark><br>The products of QJ Farm are mainly fresh food which have a <strong>short shelf life</strong>.</p> 
+		<p id="d1"><mark>Unpredictable harvest</mark><br>Due to weather or other factors, harvest of the farmer is <strong>unpredictable</strong>.</p> 
+		<p id="d2"><mark>Short shelf life</mark><br>The products are mainly fresh food which have a <strong>short shelf life</strong>.</p> 
 		<p id="d3"><mark>Inventory update</mark><br>Inventory data needs to be <strong>update frequently</strong> because of unpredictable harvest and short shelf life.</p> 
 	    </div>
 
@@ -238,24 +238,24 @@
 	<section class="value wrapper">
 	<div class="animated wow fadeInUp">
 	<h2>Core values that user cares </h2>
-	<span>Deprived from contextual inquiries and interviews, we defined three core values that user cares the most.</span>
+	<span>Deprived from contextual inquiries and interviews, we defined three core values that consumer cares the most.</span>
 	</div>
 
 	<div class="animated wow fadeInUp">
 	<p class="t">"Flexibility"</p>
 
-	<p class="c">User desires <I><b>flexibility</b></I> about the regular received products from QJ Farm. Users want to choose what and when they will receive each time. For example, during summer or winter break, family usually go on a trip for a longer period of time than usual. However, They still receive the regular products even if they aren’t at home because they cannot cease the subscription for a short period of time.</p>
+	<p class="c">User desires <I><b>flexibility</b></I> about the schedule of farmers market. There are usually a fixed schedule of farmers market. For example, the farmers markets in Austin are held on Sunday 10:00 am to 2 pm at Browning Hangar Park. However, not everyone is always available at that time. Thus, user seeks for some flexibility to buy items at different time and location. </p>
 	</div>
 
 	<div class="animated wow fadeInUp">
 	<p class="t">"Convenience"</p>
 
-	<p class="c">User seeks <I><strong>convenience</strong></I> when it comes to order food from QJ Farm. In traditional way, consumers can either make a phone call or go to the farm directly to order products. Nonetheless, there is only 5 workers including manager in the farm during week day. At most of time, they all working in the farm instead of staying in the office. Consumers usually have troubles to make an order.</p>  
+	<p class="c">User seeks <I><strong>convenience</strong></I> when it comes to order products from farmers. In traditional way, consumers can either make a phone call or go to the farm directly to order products. Nonetheless, there is only few or even only one worker in the farm during week day. At most of time, they all working in the farm instead of staying in the office and waiting for a phone call. Users usually have troubles to make an order.</p>  
 	</div>
 	<div class="animated wow fadeInUp">
 	<p class="t">"Predictability"</p>
 
-	<p class="c">User cares about <I><strong>what will they receive recently</strong></I>. Although QJ Farm notifies consumers one day before their regular receiving, consumers look for more information for them to do other decisions. Consumers still purchase fresh goods from other marketplace. If they can know how many and what will they receive from QJ Farm earlier, they will have a plan of what should buy or not buy during other shopping.</p>
+	<p class="c">User cares about <I><strong>what kinds of product will they have in this week's market</strong></I>. Users look for information for them to do other decisions. Users still purchase fresh goods from other marketplace. If they can know what will farmers have in this week's farmers market earlier, they will have a clear plan of what should buy or not buy during other shopping.</p>
 	</div>
 	
 	
@@ -293,7 +293,7 @@
 
 	<section class="brainstormconclusion wrapper">
 	<div class="animated wow fadeInUp">
-	<span>We treated three core values of user and three challenges of QJ Farm as our pillars. We came out of 50+ function first and chose those fitted the most in our user flow. Over iteration, we came out of five functions.<br><br>
+	<span>We treated three core values of user and three challenges of farmer as our pillars. We came out of 50+ function first and chose those fitted the most in our user flow. Over iteration, we came out of five functions.<br><br>
 	</span></div>
 
 
@@ -310,8 +310,8 @@
 
 
 	<p>•	Design an intuitive and user-friendly interface so that users can efficiently place their order or reserve for events <br><br>
-	•	Provide a platform which allows QJ Farm to update and sell their inventory easily and effectively<br><br>
-	•	Create connection between consumer and producer</strong><br></p>
+	•	Provide a platform which allows farmers to update and sell their inventory easily and effectively<br><br>
+	•	Create and maintain connection between consumer and producer</strong><br></p>
 
 	<span>
 	Based on our main functions and goals, we made our first wireframe.
@@ -343,7 +343,7 @@
 		</div>
 
 		
-		<h2 class="wow animated fadeInDown">For QJ Farm</h2>
+		<h2 class="wow animated fadeInDown">For farmers</h2>
 		<div class="animated wow fadeIn">
 		<img src="work/img/qj4.svg">
 		<img src="work/img/qj5.svg">
@@ -394,9 +394,7 @@
 
 
 <span>
-
-
-I gained a ton of insight into research and design from the special context fo QJ Farm. After researching markets and competitors of QJ Farm, I realized that it was a huge challenge because of the scale and characteristic of QJ Farm. A small/medium scale farm means that cost of the products is nearly impossible to be as low as large scale farm or mass-produced factory. A toxic-free and organic cultivation means that it takes more time to harvest and leads to unpredictable amount of harvest as well. Both these disadvantage directly reflect on price and amount of the product.  However, QJ Farm invites and welcomes everyone to be part of the farm. Thus, I added message and simulation game as a bridge to build connection. In future, I hope QJ Farm could grow into a community with healthy food and wealthy mood. 
+One of the biggest benefits of local farmers' market is to create social ties and link people together. Farmers' markets help create distinction and uniqueness, which can increase pride and encourage residents to engage in community. However, this kind of connection may be easily destroyed by Internet. Thus, how to maintain this connection is my first priority. In future, I think I the function for consumers to choose products with different levels of ripeness will be helpful. I hope farmers' market could grow into a hub of a community where people can find healthy food and wealthy mood.  
 </span>
 </div>
 </section>
