--- a/index.html
+++ b/index.html
@@ -237,9 +237,9 @@ Copyright <script>document.write(new Date().getFullYear());</script> Eric Chi Al
 					<div class="row">
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
 							<div class="project" style="background-image: url(work/img/qj_mockup.jpg); width: 103%; ">
-							<a href="QJ_Farm.html" target="blank"><div class="desc">
+							<a href="Q's_farmer.html" target="blank"><div class="desc">
 									<div class="con">
-										<h1>QJ Farm App</h1>
+										<h1>Q's Farmer App</h1>
 										<span>UI/UX</span>
 									</div>
 								</div>
