--- a/Q's_farmer.html
+++ b/Q's_farmer.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Q's Farm App</title>
+	<title>Q's Farmer App</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -81,7 +81,7 @@
 		</header>
 
 		<div class="caption dark clearfix focus-in-contract-bck">
-			<h1>Q's Farm App</h1>
+			<h1>Q's Farmer App</h1>
 			<p>UI/UX</p>
 			<hr>
 		</div>
