--- a/Q's_farmer.html
+++ b/Q's_farmer.html
@@ -135,12 +135,12 @@
 		<h2 class="animated wow fadeInUp">Background</h2>
 		<span class="animated wow fadeInUp">A farmers' market is a physical retail marketplace intended to sell foods directly by farmers to consumers. There are several benefits for farmers’ market. For example, by directly selling products to consumer, farmers gain more profits than selling it to wholesalers, food processors, or large grocery firms. Consumers also receive fresher and healthier foods meanwhile reduce the cost and pollution. <br><br>
 
-		Farmers hold different kind of events for people to get closer to nature and deliver knowledged of our daily food to everyone. For instance, A small farm in Austin they cooperate with schools to teach kids where our food comes from and teach them how to grow their own plants. In other words, farms play the role of educator and provide a space for leisure. 		</span>	
+		Farmers hold different kind of events for people to get closer to nature and deliver knowledges of our daily food to everyone. For instance, A small farm in Austin cooperates with schools to teach kids where our food comes from and teach them how to grow their own plants. In other words, farms play the role of educator and provide a space for leisure. 		</span>	
 
 		<img class="animated wow fadeInUp" src="work/img/IMG_4625.jpg">
 
 		<h2 class="animated wow fadeInUp">Challenge</h2>
-		<span class="animated wow fadeInUp"> For small and medium scale farmers, they have trouble in maintaining their inventory due to several reasons. They also suffer from unnecessary loss because of the characteristics of fresh vegetable and fruit. Thus, farmers seek a new way to share their risks with consumer and meet consumer’s  needs at the same time. </span>
+		<span class="animated wow fadeInUp"> For small and medium scale farmers, they have trouble in maintaining their inventory due to several reasons. They also suffer from unnecessary loss because of the characteristics of fresh vegetable and fruit. Thus, farmers seek a new way to share their risks with consumer, meet consumer’s needs and also maintain the social connection at the same time. </span>
 
 		<h2 class="animated wow fadeInUp">Research Questions</h2>
 		<p class="animated wow fadeInUp">How to duplicate the experience of farmers market from real world to digtial world? <br> What are the main goal and pain point of farmer and consumer?<br>How to share risk with customers<br>What’s the specialty and unique of farmers market?</p>
