--- a/Q's_farmer.html
+++ b/Q's_farmer.html
@@ -237,7 +237,7 @@
 
 	<section class="value wrapper">
 	<div class="animated wow fadeInUp">
-	<h2>Core values that user cares </h2>
+	<h2>Core values that consumer cares </h2>
 	<span>Deprived from contextual inquiries and interviews, we defined three core values that consumer cares the most.</span>
 	</div>
 
@@ -335,7 +335,7 @@
 
 		
 
-		<h2 class="animated wow fadeInDown">For users</h2>
+		<h2 class="animated wow fadeInDown">For consumer</h2>
 		<div class="animated wow fadeIn">
 		<img src="work/img/qj1.svg">
 		<img src="work/img/qj2.svg">
@@ -343,7 +343,7 @@
 		</div>
 
 		
-		<h2 class="wow animated fadeInDown">For farmers</h2>
+		<h2 class="wow animated fadeInDown">For farmer</h2>
 		<div class="animated wow fadeIn">
 		<img src="work/img/qj4.svg">
 		<img src="work/img/qj5.svg">
