--- a/index.html
+++ b/index.html
@@ -116,6 +116,21 @@ Copyright <script>document.write(new Date().getFullYear());</script> Eric Chi Al
 					   		</div>
 				   		</div>
 				   	</li>
+				   	<li style="background-image: url(images/img_bg_2.svg);">
+				   		<div class="overlay"></div>
+				   		<div class="container-fluid">
+				   			<div class="row">
+					   			<div class="col-md-6 col-md-offset-3 col-md-pull-3 col-sm-12 col-xs-12 js-fullheight slider-text">
+					   				<div class="slider-text-inner">
+					   					<div class="desc">
+						   					<h1>I am <br>a Designer</h1>
+												<p><a class="btn btn-primary btn-learn" href="https://www.linkedin.com/in/yucheng-chi/" target="blank">View LinkedIn <i class="icon-linkedin22"></i></a></p>
+											</div>
+					   				</div>
+					   			</div>
+					   		</div>
+				   		</div>
+				   	</li>
 				   		<li style="background-image: url(images/img_bg_3.jpg);">
 				   		<div class="overlay"></div>
 				   		<div class="container-fluid">
@@ -125,21 +140,6 @@ Copyright <script>document.write(new Date().getFullYear());</script> Eric Chi Al
 					   					<div class="desc">
 						   					<h1>Love life <br> Live it</h1>
 												<p><a class="btn btn-primary btn-learn" href="mailto:chiyyyy@utexas.edu">Message Me <i class="icon-mail5"></i></a></p>
-											</div>
-					   				</div>
-					   			</div>
-					   		</div>
-				   		</div>
-				   	</li>
-				   	<li style="background-image: url(images/img_bg_2.jpg);">
-				   		<div class="overlay"></div>
-				   		<div class="container-fluid">
-				   			<div class="row">
-					   			<div class="col-md-6 col-md-offset-3 col-md-pull-3 col-sm-12 col-xs-12 js-fullheight slider-text">
-					   				<div class="slider-text-inner">
-					   					<div class="desc">
-						   					<h1>I am <br>a Designer</h1>
-												<p><a class="btn btn-primary btn-learn" href="https://www.linkedin.com/in/yucheng-chi/" target="blank">View LinkedIn <i class="icon-linkedin22"></i></a></p>
 											</div>
 					   				</div>
 					   			</div>
